--- a/contact-us/index.jade
+++ b/contact-us/index.jade
@@ -10,7 +10,7 @@ html(lang="en")
 			#contact-heading
 				.section-top
 					h1.title.dark Contact Us
-					h2.sub-title Lets discuss how we can leverage leverage your IT resources.<br/>We will contact you within 24 hours after receiving your message.
+					h2.sub-title Lets discuss how we can leverage your IT resources.<br/>We will contact you within 24 hours after receiving your message.
 
 			#contact-body
 				.contact-form
@@ -43,5 +43,7 @@ html(lang="en")
 								span info@uneedweb.com
 
 		include ../parts/footer
+		script(type="text/javascript" src="/js/libs.min.js")
 		script(type="text/javascript" src="/js/contact-us.min.js")
+		include ../parts/navbar
 
