--- a/portfolio/gambling/index.jade
+++ b/portfolio/gambling/index.jade
@@ -65,4 +65,5 @@ html(lang="en")
 		include ../../parts/footer
 		script(type="text/javascript" src="/js/libs.min.js")
 		script(type="text/javascript" src="/js/portfolio.min.js")
+		include ../../parts/navbar
 
