--- a/portfolio/sport/index.jade
+++ b/portfolio/sport/index.jade
@@ -69,4 +69,5 @@ html(lang="en")
 		include ../../parts/footer
 		script(type="text/javascript" src="/js/libs.min.js")
 		script(type="text/javascript" src="/js/portfolio.min.js")
+		include ../../parts/navbar
 
