--- a/services/outsource/index.jade
+++ b/services/outsource/index.jade
@@ -108,4 +108,5 @@ html(lang="en")
 		include ../../parts/footer
 		script(type="text/javascript" src="/js/libs.min.js")
 		script(type="text/javascript" src="/js/services.min.js")
+		include ../../parts/navbar
 
