--- a/services/outstaff/index.jade
+++ b/services/outstaff/index.jade
@@ -127,4 +127,5 @@ html(lang="en")
 		include ../../parts/footer
 		script(type="text/javascript" src="/js/libs.min.js")
 		script(type="text/javascript" src="/js/services.min.js")
+		include ../../parts/navbar
 
