--- a/services/relocation/index.jade
+++ b/services/relocation/index.jade
@@ -111,4 +111,5 @@ html(lang="en")
 		include ../../parts/footer
 		script(type="text/javascript" src="/js/libs.min.js")
 		script(type="text/javascript" src="/js/services.min.js")
+		include ../../parts/navbar
 
