--- a/portfolio/index.jade
+++ b/portfolio/index.jade
@@ -122,7 +122,7 @@ html(lang="en")
 							h2.type Web Development
 							.name Data Management
 						.project-footer
-							.description Localisation helper a software that eases the translation of an online sports application into multiple languages.
+							.description Localisation helper: a software that eases the translation of an online sports application into multiple languages.
 							a.details-link(href="/portfolio/localisation")
 								button.details-button(type="button")
 									span Details
