--- a/styl/general.styl
+++ b/styl/general.styl
@@ -186,7 +186,7 @@ body
 		#toggle-navbar
 			justify-content: center
 			.icon-bar:nth-child(1)
-				transform: rotate(-45deg) translateY(2px)
+				transform: rotate(-45deg) translateY(3px)
 			.icon-bar:nth-child(2)
 				display: none
 			.icon-bar:nth-child(3)
@@ -199,7 +199,7 @@ body
 	transition: transform .3s ease
 	transform: translateY(-100%)
 	background-color: #0e1a35
-	z-index: 2
+	z-index: 6
 	padding: 2rem 0
 	overflow-y: auto
 	.menu-list
@@ -229,7 +229,7 @@ body
 header
 	position: fixed
 	width: 100%
-	z-index: 1
+	z-index: 5
 	background: #0e1a35
 	padding-bottom: 1rem
 	transition: transform .3s ease
@@ -238,6 +238,8 @@ header
 	&.nav-up
 		transform: translateY(-100%)
 	&.scrolled
+		background: #0e1a35 !important
+		border-bottom: 1px solid #576076
 		.container
 			padding-top: 0
 			padding-bottom: 0
@@ -416,7 +418,7 @@ header
 	background-color: transparent
 	border: none
 	position: fixed
-	z-index: 3
+	z-index: 7
 	top: 1.6rem
 	right: 1rem
 	height: 1.4rem
