--- a/styl/index.styl
+++ b/styl/index.styl
@@ -194,7 +194,6 @@
 			margin-top: -1rem
 			margin-bottom: 5rem
 			.feature
-				opacity: 0
 				padding: 0 1rem
 				margin: 1rem 0
 				display: flex
@@ -223,12 +222,15 @@
 				flex-wrap: wrap
 				.feature
 					width: 50%
+					svg
+						opacity: 0
 			&.visible
 				.feature
-					transform: scale(.5)
-					for items in 1..10
-						&:nth-child({items})
-							animation: pop .5s .3s*items 1 forwards
+					svg
+						transform: scale(.5)
+						for items in 1..10
+							&:nth-child({items})
+								animation: pop .5s .3s*items 1 forwards
 		@media screen and (min-width: $screenMedium)
 			.features-container
 				justify-content: center
@@ -236,19 +238,26 @@
 					width: 24rem
 			&.visible
 				.feature
-					transform: scale(.5)
+					svg
+						transform: scale(.5)
 					&:nth-child(1)
-						animation: pop .5s .3s 1 forwards
+						svg
+							animation: pop .5s .3s 1 forwards
 					&:nth-child(2)
-						animation: pop .5s .3s 1 forwards
+						svg
+							animation: pop .5s .3s 1 forwards
 					&:nth-child(3)
-						animation: pop .5s .6s 1 forwards
+						svg
+							animation: pop .5s .6s 1 forwards
 					&:nth-child(4)
-						animation: pop .5s .6s 1 forwards
+						svg
+							animation: pop .5s .6s 1 forwards
 					&:nth-child(5)
-						animation: pop .5s .9s 1 forwards
+						svg
+							animation: pop .5s .9s 1 forwards
 					&:nth-child(6)
-						animation: pop .5s .9s 1 forwards
+						svg
+							animation: pop .5s .9s 1 forwards
 
 	#portfolio
 		text-align: center
