Fix number. Fix navbar

--- a/contact-us/index.jade
+++ b/contact-us/index.jade
@@ -35,7 +35,7 @@ html(lang="en")
 							a.flex.align-ver-center(href="tel:380955914765")
 								span.icon
 									include ../icons/phone
-								span +38 099 4612335
+								span +38 095 591 4765
 						p
 							a.flex.align-ver-center(href="mailto:info@uneedweb.com?subject=Contact Uneed Web")
 								span.icon
