--- a/styl/general.styl
+++ b/styl/general.styl
@@ -232,7 +232,7 @@ header
 	z-index: 5
 	background: linear-gradient(to left, #18243d, #0e1a35)
 	padding-bottom: 1rem
-	transition: transform .3s ease, background .3s ease
+	transition: transform .3s ease
 	.container
 		transition: padding .3s ease
 	&.scrolled
