Add google verification

--- a/parts/head.jade
+++ b/parts/head.jade
@@ -6,6 +6,7 @@ mixin head(title, keywords, description)
 		meta(name="description" content="#{description}")
 		meta(name="keywords" content="#{keywords}")
 		meta(name="author" content="Kirill Buga")
+		meta(name="google-site-verification" content="LwQQ9t3gqtSzXa3rmNyxen3Nav8qoGwgHGP3B-5yMbo")
 		meta(name="apple-mobile-web-app-title" content="uneedweb")
 		meta(name="application-name" content="uneedweb")
 		meta(name="theme-color" content="#ffffff")
