Improvement of the images on landing. Add services icons

--- a/contact-us/index.jade
+++ b/contact-us/index.jade
@@ -19,7 +19,7 @@ html(lang="en")
 						.form-container
 							input#user_name(type="text" placeholder="Name" name="name" required)
 							input#user_email(type="email" placeholder="Email" name="email" required)
-							input#user_phone(type="tel" placeholder="Phone Number (optional)" name="phone" pattern="^\d{4}-\d{3}-\d{4}$")
+							input#user_phone(type="tel" placeholder="Phone Number (optional)" name="phone")
 							textarea#user_message(name="message" rows="5" placeholder="Message")
 						button.white(type="submit") Send Email
 
@@ -41,6 +41,11 @@ html(lang="en")
 								span.icon
 									include ../icons/mail
 								span info@uneedweb.com
+						p.services
+							a(href="https://www.facebook.com/uneedweb/" target="_blank")
+								img(src="/images/png/services/facebook.png", alt="facebook icon", width="35")
+							a(href="https://www.linkedin.com/company/18188825/" target="_blank")
+								img(src="/images/png/services/linkedin.png", alt="linkedin icon", width="35")
 
 		include ../parts/footer
 		script(type="text/javascript" src="/js/libs.min.js")
