--- a/index.jade
+++ b/index.jade
@@ -144,8 +144,7 @@ html(lang="en")
 									.tag CSS
 									.tag HTML
 
-								.portfolio-image
-									img(src="/images/png/hp-1-web.png", alt="Web image", width="100%" height="100%")
+								.portfolio-image.web
 								.desktop-button
 									a(href="/portfolio")
 										button(role="button")
@@ -162,8 +161,7 @@ html(lang="en")
 									.tag Ionic
 									.tag Xamarin Framework
 
-								.portfolio-image
-									img(src="/images/png/hp-2-mobile.png", alt="Mobile image", width="100%" height="100%")
+								.portfolio-image.mobile
 								.desktop-button
 									a(href="/portfolio")
 										button(role="button")
@@ -179,11 +177,10 @@ html(lang="en")
 									.tag Sketch
 									.tag Adobe Photoshop
 									.tag Adobe Illustrator
-									.tag Mobile Interfaces
+									.tag Interfaces
 									.tag Web Design \ UX
 
-								.portfolio-image
-									img(src="/images/png/hp-3-design.png", alt="Design image", width="100%" height="100%")
+								.portfolio-image.design
 								.desktop-button
 									a(href="/portfolio")
 										button(role="button")
