--- a/styl/general.styl
+++ b/styl/general.styl
@@ -154,6 +154,7 @@ h2.sub-title
 	background-image: linear-gradient(to left, #4444b9, #ec523e)
 	
 .container
+	width: 100%
 	padding 0 1.5rem
 	margin-right auto
 	margin-left auto
