--- a/styl/portfolio.styl
+++ b/styl/portfolio.styl
@@ -10,6 +10,7 @@
 		.container
 			padding: 0
 			width: 100%
+			max-width: 1400px
 		.project
 			position: relative
 			width: 100%
@@ -172,10 +173,9 @@
 		background: transparent
 
 	#landing
-		padding-top: 21rem
 		height 20rem
 		position: relative
-		background-image url('/photos/landing.jpg')
+		background-image url('/photos/landing-small.jpg')
 		background-size: 1200px
 		background-position: 50% 25%
 		background-repeat: no-repeat
