--- a/styl/contact-us.styl
+++ b/styl/contact-us.styl
@@ -63,6 +63,9 @@
 				line-height: 1.5
 				text-align: left
 				color: #8492af
+				.services
+					a
+						margin-right: .5rem
 				address
 					font-style: normal
 					width: 15rem
