Update meta tags. Update services table with correct values

--- a/contact-us/index.jade
+++ b/contact-us/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../parts/head
-	+head("Outstanding software engineering practices | UNeed Web", "where to outsource software development, how to find offshore software development company, why outsource web development, how to find web design company", "At UNeed Web we deliver top-quality web developement services (web sites, web apps, offshore IT outsourcing). Our experienced team of developers, designers and project managers implement customised web projects.")
+	+head("Something to Ask - Contact Us | UNeed Web", "where to outsource software development, how to find offshore software development company, why outsource web development, how to find web design company", "We would love to hear what projects, ideas, endeavours you have! Fill in the form and we'll get back as soon as we can!")
 	body#contact-us-page
 		include ../parts/header
 		include ../parts/mobile-nav
@@ -10,7 +10,7 @@ html(lang="en")
 			#contact-heading
 				.section-top
 					h1.title.dark Contact Us
-					h2.sub-title Lets discuss how we can leverage your IT resources.<br/>We will contact you within 24 hours after receiving your message.
+					h2.sub-title We would love to hear what projects, ideas, endeavours you have!<br/> Fill in the form and we'll get back as soon as we can!
 
 			#contact-body
 				.contact-form
