--- a/portfolio/index.jade
+++ b/portfolio/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../parts/head
-	+head("Portfolio | UNeed Web", "Web development projects, mobile development projects, product design", "Find out our track record of high quality tech solutions for web and mobile development, web design and more.")
+	+head("Portfolio | UNeed Web", "Web development projects, mobile development projects, product design", "Uneed Web drives innovation into services by crafting web and mobile applications, enlivening them with web design.")
 	body#portfolio-page
 		include ../parts/header
 		include ../parts/mobile-nav
