--- a/services/index.jade
+++ b/services/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../parts/head
-	+head("Project Web Development - Dedicated Development Team - Outstaffing | UNeed Web", "web software development, web design development, dedicated development team, project web development, team extension, agile software engingeering", "We believe that software development is a highly engaging social process where the key element is communication. At #Studio we nurture personal approach to your cause and ideas, bringing core value to the end-product.")
+	+head("Uneed Services | Uneed Web", "web software development, web design development, dedicated development team, project web development, team extension, agile software engingeering", "Uneed Web partners with companies to sustain them by project development, providing dedicated teams and specialists for relocation.")
 	body#services-page
 		include ../parts/header
 		include ../parts/mobile-nav
@@ -74,7 +74,7 @@ html(lang="en")
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
 							.option-name PM methodology
-							.option-checkbox.checked
+							.option-value SCRUM
 						.slide-option(data-tappable="true")
 							.option-name Instant Feedback
 							.option-checkbox.checked
@@ -113,7 +113,7 @@ html(lang="en")
 							.option-checkbox
 						.slide-option(data-tappable="true")
 							.option-name Workspace/Equipment
-							.option-checkbox
+							.option-checkbox.checked
 						.slide-option(data-tappable="true")
 							.option-name PM
 							.option-value On Demand
@@ -179,13 +179,13 @@ html(lang="en")
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
 							.option-name Fast Start of the Project
-							.option-checkbox.checked
+							.option-value Depends on Visa availability
 						.slide-option(data-tappable="true")
 							.option-name PM methodology
 							.option-value On Demand
 						.slide-option(data-tappable="true")
 							.option-name Instant Feedback
-							.option-checkbox.checked
+							.option-value Until the final relocation
 						.slide-option(data-tappable="true")
 							.option-name Cardidates Interview
 							.option-checkbox.checked
@@ -194,7 +194,7 @@ html(lang="en")
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
 							.option-name Estimates
-							.option-checkbox.checked
+							.option-value Salary for the Team/Developer
 						.slide-option(data-tappable="true")
 							.option-name After Release Support
 							.option-checkbox
