--- a/services/outstaff/index.jade
+++ b/services/outstaff/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
-	+head("Dedicated Development Team | UNeed Web", "Team Extension, Dedicated Team, Outstaffing, Benefits of offshore software development", "Dedicated Development Team is a cost-effective outstaffing model for companies that work on software product development and require high-quality, efficient resources within an optimized time frame.")
+	+head("Augmented Development Team | Uneed Web", "Team Extension, Dedicated Team, Outstaffing, Benefits of offshore software development", "43% of companies who outsource look for scaling their operations. With augmented development team you will attain higher flexibility for scaling.")
 	body#service-page
 		include ../../parts/header
 		include ../../parts/mobile-nav
