--- a/services/outsource/index.jade
+++ b/services/outsource/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
-	+head("Project Development | UNeed Web", "Front-end development, Back-end development, PHP, SQL, JavaScript, HTML, Responsive Design, CSS, React, Angular, Wordpress", "Our team of experienced software professionals will guarantee that your product is successfully developed. By offloading your project to us, you will optimize work, save the best in-house staff for more valuable tasks.")
+	+head("Project Development | UNeed Web", "Front-end development, Back-end development, PHP, SQL, JavaScript, HTML, Responsive Design, CSS, React, Angular, Wordpress", "According to recent KPMG study 36% of senior managers find project development outsourcing as a greater access to better standardized processes.")
 	body#service-page
 		include ../../parts/header
 		include ../../parts/mobile-nav
