--- a/services/relocation/index.jade
+++ b/services/relocation/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
-	+head("Specialist for Relocation | UNeed Web", "full-stack, fron-end developer, back-end developer, PHP developer, Java developer, Web Developer, in-house developer", "At UNeed Web we find competent candidates tailored to your specific requirements with necessary technical skills for relocation. ")
+	+head("Specialist for Relocation | UNeed Web", "full-stack, fron-end developer, back-end developer, PHP developer, Java developer, Web Developer, in-house developer", "Access strategic talents that adds value beyond standard options. We are your committed partner to find top specialists for relocation.")
 	body#service-page
 		include ../../parts/header
 		include ../../parts/mobile-nav
