--- a/styl/services.styl
+++ b/styl/services.styl
@@ -82,6 +82,7 @@
 				padding: 2rem 1rem
 			.option-name
 				padding-right: 2rem
+				min-width: 65%
 			.option-value
 				min-width: 5rem
 				text-align: right
