Add google tag manager

--- a/portfolio/index.jade
+++ b/portfolio/index.jade
@@ -36,7 +36,7 @@ html(lang="en")
 					.project-content
 						.project-header
 							h2.type Web Development
-							.name Travel
+							.name Booking
 						.project-footer
 							.description Development of a web application for a travel company with a complete 			customer planning journey features.
 							a.details-link(href="/portfolio/travel")
@@ -106,7 +106,7 @@ html(lang="en")
 					.project-content
 						.project-header
 							h2.type Web Development
-							.name Travel
+							.name Social Network
 						.project-footer
 							.description Creation of an engaging travel-oriented social network service with an embedded e-commerce platform.
 							a.details-link(href="/portfolio/social-travel")
