--- a/styl/portfolio.styl
+++ b/styl/portfolio.styl
@@ -208,7 +208,7 @@
 		.tags
 			margin: 2rem 0
 			
-		// стрелочка разворачивалась начиная с планшетной ширины
+		// arrow was rotated since tablet width
 
 		// @media screen and (min-width: $screenSmall)
 		.prev-project, .next-project
@@ -239,8 +239,6 @@
 			background-image: url('/photos/travel/travel-image-1.png')
 		&.sport
 			background-image: url('/photos/sport/sport-image-1.png')
-		&.yow
-			background-image: url('/photos/yow/yow-image-1.png')
 		&.banking
 			background-image: url('/photos/banking/banking-image-1.png')
 		&.gambling
