--- a/portfolio/yow/index.jade
+++ b/portfolio/yow/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
-	+head("Portfolio - YOW | Uneedweb", "Travel application, Mobile Development, online scratch map", "Our own mobile application that keeps track of the places you visit and shows your exploration progress.")
+	+head("Portfolio - yow | Uneedweb", "Travel application, Mobile Development, online scratch map", "Our own mobile application that keeps track of the places you visit and shows your exploration progress.")
 	body#portfolio-project-page.project-yow
 		include ../../parts/header
 		include ../../parts/mobile-nav
@@ -24,22 +24,22 @@ html(lang="en")
 				.section-top
 					h2.type mobile Development
 					h1.title.dark Your Open World
-					h2.sub-title You travel a lot, but do not keep track of the places you visit? Your friend asks you about countries you have seen and you scratch your head thinking? Better scratch the map. With our new application YOW you can keep track of your journeys’ history. As we travel extensively throughout the year for fellow travel-lovers we crafted this handful tool.
+					h2.sub-title You travel a lot, but do not keep track of the places you visit? Your friend asks you about countries you have seen and you scratch your head thinking? Better scratch the map. With our new application yow you can keep track of your journeys’ history. As we travel extensively throughout the year for fellow travel-lovers we crafted this handful tool.
 
 		section#technologies
 
 			.yow-decorative-block.yow-decorative-block-logo
 				.container
 					.yow-icon-wrapper.icon-1
-						img(src="../../images/YOW/yow-icon-1.png" alt="YOW")
+						img(src="../../images/yow/yow-icon-1.png" alt="yow")
 					.arrow-wrapper
 						include ../../icons/arrow-right
 					.yow-icon-wrapper.icon-2
-						img(src="../../images/YOW/yow-icon-2.png" alt="YOW")
+						img(src="../../images/yow/yow-icon-2.png" alt="yow")
 					.arrow-wrapper
 						include ../../icons/arrow-right
 					.yow-icon-wrapper.icon-3
-						img(src="../../images/YOW/yow-icon-3.png" alt="YOW")
+						img(src="../../images/yow/yow-icon-3.png" alt="yow")
 
 			.container
 				.section-top
@@ -83,11 +83,11 @@ html(lang="en")
 			.container
 				.section-top
 					h1.title Our Features
-					h2.sub-title Our technical team used a comprehensive set of tools and technologies during YOW development.
+					h2.sub-title Our technical team used a comprehensive set of tools and technologies during yow development.
 					ul.features-list
 						li.feature-item.feature-item-offline-work
 							h2.feature-name Offline Working
-							p.feature-descr YOW works offline, including maps, which means there is no need to look for Wi-Fi spots.
+							p.feature-descr yow works offline, including maps, which means there is no need to look for Wi-Fi spots.
 						li.feature-item.feature-item-stor-pict
 							h2.feature-name Storing Pictures
 							p.feature-descr Every time you take your finest snapshots you can attach them to the places on the map through the app.
