--- a/styl/yow.styl
+++ b/styl/yow.styl
@@ -2,7 +2,7 @@
 	
 	#top-yow
 		min-height: 269px
-		background: url('../images/YOW/yow-top-background.png') no-repeat top right 40%
+		background: url('../images/yow/yow-top-background.png') no-repeat top right 40%
 		background-size: 150%
 		
 		@media screen and (min-width: $screenSmall)
@@ -80,21 +80,21 @@
 							right: 28.5rem
 
 		&-map
-			background-image: url('../images/YOW/about-image.png')
+			background-image: url('../images/yow/about-image.png')
 			background-size: contain
 			
 			@media screen and (min-width: $screenSmall)
 				min-height: 546px
 			
 		&-phone
-			background-image: url('../images/YOW/share-image.png')
+			background-image: url('../images/yow/share-image.png')
 			background-size: contain
 			
 			@media screen and (min-width: $screenSmall)
 				min-height: 649px
 			
 			@media screen and (min-width: $screenLarge)
-				background-image: url('../images/YOW/share-image-desktop.png')
+				background-image: url('../images/yow/share-image-desktop.png')
 		
 	#technologies
 		
@@ -170,7 +170,7 @@
 	
 	#features
 		margin-bottom: 5rem
-		background: url('../photos/YOW/yow-features-background.jpg') no-repeat top left -150px
+		background: url('../photos/yow/yow-features-background.jpg') no-repeat top left -150px
 		background-size: cover
 		
 		@media screen and (min-width: $screenSmall)
@@ -221,13 +221,13 @@
 				background: no-repeat top center
 				
 				&-offline-work
-					background-image: url('../images/YOW/ic-1-offline.svg')
+					background-image: url('../images/yow/ic-1-offline.svg')
 				
 				&-stor-pict
-					background-image: url('../images/YOW/ic-2-storing.svg')
+					background-image: url('../images/yow/ic-2-storing.svg')
 				
 				&-smart-adviser
-					background-image: url('../images/YOW/ic-3-smart.svg')
+					background-image: url('../images/yow/ic-3-smart.svg')
 
 				@media screen and (min-width: $screenLarge)
 				
